(PC-14916)[PRO] fix: ui-kit: Select: fix vertical align

--- a/pro/src/ui-kit/form/Select/Select.module.scss
+++ b/pro/src/ui-kit/form/Select/Select.module.scss
@@ -6,6 +6,7 @@
 
 .select-input {
   @include formsM.input-theme();
+  line-height: rem.torem(36px);
   padding-right: rem.torem(forms.$input-right-icon-padding);
 
   &.has-description {
